--- a/src/app/components/current-account/current-account.component.html
+++ b/src/app/components/current-account/current-account.component.html
@@ -20,20 +20,10 @@
         <div class="row">
             <div class="col-12">
                 <div class="row">
+
                     <div class="col-md-12">
 
-
-                        <!-- <div class="col-md-1 mt-3" style=" float: left;">
-                            <div class="form-check form-switch d-flex align-items-center mb-3">
-                                <input class="form-check-input" type="checkbox" id="Tümü" [(ngModel)]='all'
-                                    (change)="listCheck()">
-                                <label class="form-check-label mb-0 ms-2" for="Tümü">
-                                    Tümü
-                                </label>
-                            </div>
-                        </div> -->
-
-                        <div class="col-md-1 mt-3" style=" float: left;">
+                        <div *ngIf="operationGetAll" class="col-md-1 mt-3" style=" float: left;">
                             <div class="form-check form-switch d-flex align-items-center mb-3">
                                 <input class="form-check-input" type="checkbox" id="Aktif" [(ngModel)]='active'
                                     (change)="activeCheck()">
@@ -43,7 +33,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-1 mt-3" style=" float: left;">
+                        <div *ngIf="operationGetAll" class="col-md-1 mt-3" style=" float: left;">
                             <div class="form-check form-switch d-flex align-items-center mb-3">
                                 <input class="form-check-input" type="checkbox" id="Pasif" [(ngModel)]='passive'
                                     (change)="passiveCheck()">
@@ -53,7 +43,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 mt-2" style=" float: left;">
+                        <div *ngIf="operationGetAll" class="col-md-3 mt-2" style=" float: left;">
                             <div class="input-group input-group-outline">
                                 <input type="text" class="form-control" onfocus="focused(this)"
                                     onfocusout="defocused(this)"
@@ -65,30 +55,32 @@
 
                         <div class="col-md-6" style=" float: right;">
 
-                            <button type="button" class="btn btn-lg bg-gradient-danger mx-2" (click)="exportToExcel()"
-                                style=" float: right;">
+                            <button *ngIf="operationGetAll" type="button" class="btn btn-lg bg-gradient-danger mx-2"
+                                (click)="exportToExcel()" style=" float: right;">
                                 <i class="fa-solid fa-download" style="font-size: 15px; margin-right: 5px;"></i>
                                 Cari Listesini Excel'e Aktar
                             </button>
 
-                            <button type="button" class="btn btn-lg bg-gradient-success mx-2" style=" float: right;"
-                                data-bs-toggle="modal" data-bs-target="#addFromExcelCurrencyAccountModal">
+                            <button *ngIf="operationAdd" type="button" class="btn btn-lg bg-gradient-success mx-2"
+                                style=" float: right;" data-bs-toggle="modal"
+                                data-bs-target="#addFromExcelCurrencyAccountModal">
                                 <i class="fa-solid fa-file-excel" style="font-size: 15px; margin-right: 5px;"></i>
                                 Cari Ekle (Excel)
                             </button>
 
-                            <button type="button" class="btn btn-lg bg-gradient-info mx-2" style=" float: right;"
-                                data-bs-toggle="modal" data-bs-target="#addCurrencyAccountModal">
+                            <button *ngIf="operationAdd" type="button" class="btn btn-lg bg-gradient-info mx-2"
+                                style=" float: right;" data-bs-toggle="modal" data-bs-target="#addCurrencyAccountModal">
                                 <i class="fa-solid fa-user-plus" style="font-size: 14px; margin-right: 5px;"></i>
                                 Cari Ekle
                             </button>
                         </div>
-
-
                     </div>
+
+
+
                 </div>
 
-                <div class="card my-4">
+                <div *ngIf="operationGetAll" class="card my-4">
 
                     <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                         <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
@@ -115,7 +107,8 @@
                                         <th class=" text-secondary text-xs font-weight-bolder opacity-7">
                                             Kayıt Tarihi / Durumu
                                         </th>
-                                        <th class="text-center text-secondary text-xs font-weight-bolder opacity-7">
+                                        <th *ngIf="!(!operationDelete && !operationUpdate)"
+                                            class="text-center text-secondary text-xs font-weight-bolder opacity-7">
                                             İşlemler
                                         </th>
                                     </tr>
@@ -170,17 +163,18 @@
                                             <span *ngIf='currentAccount.isActive == false'
                                                 class="badge badge-sm bg-gradient-danger">Pasif</span>
                                         </td>
-                                        <td class="align-middle">
+                                        <td *ngIf="!(!operationDelete && !operationUpdate)" class="align-middle">
                                             <div class="row justify-content-center mx-2">
-                                                <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal"
+                                                <button *ngIf="operationUpdate" type="button"
+                                                    class="btn btn-info btn-sm" data-bs-toggle="modal"
                                                     data-bs-target="#updateCurrencyAccountModal"
                                                     (click)="getById(currentAccount.id)">
                                                     Güncelle
                                                 </button>
                                             </div>
                                             <div class="row justify-content-center mx-2">
-                                                <button class="btn btn-sm btn-danger" (confirm)="delete(currentAccount)"
-                                                    [swal]="deleteCurrencyAccount">
+                                                <button *ngIf="operationDelete" class="btn btn-sm btn-danger"
+                                                    (confirm)="delete(currentAccount)" [swal]="deleteCurrencyAccount">
                                                     Sil
                                                 </button>
                                             </div>
@@ -193,6 +187,11 @@
                         </div>
                     </div>
                 </div>
+
+                <p *ngIf="!operationGetAll"
+                    class="alert alert-danger rounded-pill w-50 text-center mx-auto mt-5 text-white text-bold"
+                    role="alert" style="font-size: 18px;">Listeyi görüntülemeye yetkiniz yok.
+                </p>
 
             </div>
         </div>
