--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -55,7 +55,7 @@
         </li>
 
         <li *ngIf="userMenu" class="nav-item">
-            <a class="nav-link text-white " href="./pages/sign-in.html">
+            <a [class]="sidenavButtonClass('user')"  routerLink="/user">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">person</i>
                 </div>
