--- a/src/app/components/current-account/current-account.component.html
+++ b/src/app/components/current-account/current-account.component.html
@@ -55,8 +55,9 @@
 
                         <div class="col-md-6" style=" float: right;">
 
-                            <button *ngIf="currentAccountGetall" type="button" class="btn btn-lg bg-gradient-danger mx-2"
-                                (click)="exportToExcel()" style=" float: right;">
+                            <button *ngIf="currentAccountGetall" type="button"
+                                class="btn btn-lg bg-gradient-danger mx-2" (click)="exportToExcel()"
+                                style=" float: right;">
                                 <i class="fa-solid fa-download" style="font-size: 15px; margin-right: 5px;"></i>
                                 Cari Listesini Excel'e Aktar
                             </button>
@@ -76,8 +77,6 @@
                         </div>
                     </div>
 
-
-
                 </div>
 
                 <div *ngIf="currentAccountGetall" class="card my-4">
@@ -90,6 +89,7 @@
                     <div class="card-body px-0 pb-2">
                         <div class="table-responsive p-0">
                             <table id="currencyAccountTable" class="table align-items-center mb-0">
+
                                 <thead>
                                     <tr>
                                         <th class=" text-secondary text-xs font-weight-bolder opacity-7">
@@ -115,9 +115,8 @@
                                 </thead>
 
                                 <tbody>
-                                    <tr
-                                        *ngFor="let currentAccount of currentAccounts 
-                                        | currentAccountSearchPipe : searchText | currentAccountActivePassive : activePassiveStatus()">
+                                    <tr *ngFor="let currentAccount of currentAccounts | currentAccountSearchPipe : searchText 
+                                    | currentAccountActivePassive : activePassiveStatus()">
 
                                         <td>
                                             <div class="px-2 py-1">
@@ -163,7 +162,8 @@
                                             <span *ngIf='currentAccount.isActive == false'
                                                 class="badge badge-sm bg-gradient-danger">Pasif</span>
                                         </td>
-                                        <td *ngIf="!(!currentAccountDelete && !currentAccountUpdate)" class="align-middle">
+                                        <td *ngIf="!(!currentAccountDelete && !currentAccountUpdate)"
+                                            class="align-middle">
                                             <div class="row justify-content-center mx-2">
                                                 <button *ngIf="currentAccountUpdate" type="button"
                                                     class="btn btn-info btn-sm" data-bs-toggle="modal"
@@ -428,5 +428,3 @@
     </div>
 </div>
 <!-- cari update -->
-
-
