users page 2, delete user company between relationship, get companies by user

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -42,7 +42,7 @@
 
         <li *ngIf="!(!currentAccountMenu && !userMenu && !companyMenu && !mailParameterMenu && !mailTemplateMenu)"
             class="nav-item mt-3">
-            <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Kayıt İşlemleri</h6>
+            <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Kayıtlar</h6>
         </li>
 
         <li *ngIf="currentAccountMenu"class="nav-item">
@@ -50,7 +50,7 @@
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">receipt_long</i>
                 </div>
-                <span class="nav-link-text ms-1">Cari Kaydı</span>
+                <span class="nav-link-text ms-1">Cariler</span>
             </a>
         </li>
 
@@ -59,7 +59,16 @@
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">person</i>
                 </div>
-                <span class="nav-link-text ms-1">Kullanıcı Kaydı</span>
+                <span class="nav-link-text ms-1">Kullanıcılar</span>
+            </a>
+        </li>
+
+        <li *ngIf="userMenu" class="nav-item">
+            <a [class]="sidenavButtonClass('user2')"  routerLink="/user2">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">person</i>
+                </div>
+                <span class="nav-link-text ms-1">Kullanıcılar 2</span>
             </a>
         </li>
 
@@ -68,7 +77,7 @@
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">domain</i>
                 </div>
-                <span class="nav-link-text ms-1">Şirket Kaydı</span>
+                <span class="nav-link-text ms-1">Şirketler</span>
             </a>
         </li>
 
@@ -77,7 +86,7 @@
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">mail</i>
                 </div>
-                <span class="nav-link-text ms-1">Mail Parametre Kaydı</span>
+                <span class="nav-link-text ms-1">Mail Parametreleri</span>
             </a>
         </li>
 
@@ -86,7 +95,7 @@
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">web</i>
                 </div>
-                <span class="nav-link-text ms-1">Mail Şablon Kaydı</span>
+                <span class="nav-link-text ms-1">Mail Şablonları</span>
             </a>
         </li>
 
