--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -73,7 +73,7 @@
         </li>
 
         <li *ngIf="companyMenu" class="nav-item">
-            <a class="nav-link text-white " href="./pages/sign-in.html">
+            <a  [class]="sidenavButtonClass('company')" routerLink="/company">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">domain</i>
                 </div>
