--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,72 +1,146 @@
 <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur"
-    navbar-scroll="true">
-    <div class="container-fluid py-1 px-3">
+  navbar-scroll="true">
+  <div class="container-fluid py-1 px-3">
 
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-                <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-                <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Dashboard</li>
-            </ol>
-            <h6 class="font-weight-bolder mb-0 text-danger">{{companyName}}</h6>
-        </nav>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
+        <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
+        <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Dashboard</li>
+      </ol>
+      <h6 class="font-weight-bolder mb-0 text-danger">{{companyName}}</h6>
+    </nav>
 
-        <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
+    <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
 
-            <div class="ms-md-auto pe-md-3 d-flex align-items-center">
-                <!-- <div class="input-group input-group-outline">
+      <div class="ms-md-auto pe-md-3 d-flex align-items-center">
+        <!-- <div class="input-group input-group-outline">
                  <label class="form-label">Type here...</label>
                     <input type="text" class="form-control">
                 </div> -->
-            </div>
+      </div>
 
-            <ul class="navbar-nav  justify-content-end">
+      <ul class="navbar-nav  justify-content-end">
 
-                <!-- profil -->
-                <li class="nav-item d-flex align-items-center mx-2">
-                    <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">
-                        <i class="fa fa-user me-sm-1"></i>
-                        <span class="d-sm-inline d-none">Profil</span>
-                    </a>
-                </li>
+        <!-- profil -->
+        <li class="nav-item d-flex align-items-center mx-2">
+          <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">
+            <i class="fa fa-user me-sm-1"></i>
+            <span class="d-sm-inline d-none">Profil</span>
+          </a>
+        </li>
 
-                <!-- ayarlar -->
-                <li class="nav-item d-flex align-items-center mx-2">
-                    <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">
-                        <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
-                        <span class="d-sm-inline d-none mx-1">Tema Ayarları</span>
-                    </a>
-                </li>
+        <!-- ayarlar -->
+        <li class="nav-item d-flex align-items-center mx-2">
+          <a href="javascript:;" class="nav-link text-body font-weight-bold px-0"
+            (click)="buttonClass = 'fixed-plugin ps show' ">
+            <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
+            <span class="d-sm-inline d-none mx-1">Tema Ayarları</span>
+          </a>
+        </li>
 
-                <!-- şirket değiştir -->
-                <li class="nav-item dropdown pe-2 d-flex align-items-center nav-item d-flex">
-                    <a href="javascript:;" class="nav-link text-body p-0 font-weight-bold px-0" id="dropdownMenuButton"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fa-solid fa-right-left"></i>
-                        <span class="d-sm-inline d-none mx-1">Şirketi Değiştir</span>
-                    </a>
-                    <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4"
-                        aria-labelledby="dropdownMenuButton">
-                        <li *ngFor="let company of companies" class="mb-2">
-                            <a class="dropdown-item border-radius-md" (click)="changeCompany(company.id, company.name)">
-                                <div class="d-flex py-1">
-                                    <div class="d-flex flex-column justify-content-center">
-                                        <h6 class="text-sm font-weight-normal mb-1 text-center">
-                                            <span class="font-weight-bold">{{company.name}}</span>
-                                        </h6>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+        <!-- şirket değiştir -->
+        <li class="nav-item dropdown pe-2 d-flex align-items-center nav-item d-flex">
+          <a href="javascript:;" class="nav-link text-body p-0 font-weight-bold px-0" id="dropdownMenuButton"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-right-left"></i>
+            <span class="d-sm-inline d-none mx-1">Şirketi Değiştir</span>
+          </a>
+          <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
+            <li *ngFor="let company of companies" class="mb-2">
+              <a class="dropdown-item border-radius-md" (click)="changeCompany(company.id, company.name)">
+                <div class="d-flex py-1">
+                  <div class="d-flex flex-column justify-content-center">
+                    <h6 class="text-sm font-weight-normal mb-1 text-center">
+                      <span class="font-weight-bold">{{company.name}}</span>
+                    </h6>
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </li>
 
-
-
-
-
-
-
-            </ul>
-        </div>
+      </ul>
     </div>
+  </div>
 </nav>
+
+
+<div [class]="changeButton()">
+  <div class="card shadow-lg">
+    <div class="card-header pb-0 pt-3">
+      <div class="float-start">
+        <h5 class="mt-3 mb-0">Material UI Configurator</h5>
+        <p>See our dashboard options.</p>
+      </div>
+      <div class="float-end mt-4" (click)="buttonClass = 'fixed-plugin ps' ">
+        <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
+          <i class="material-icons">clear</i>
+        </button>
+      </div>
+      <!-- End Toggle Button -->
+    </div>
+    <hr class="horizontal dark my-1">
+    <div class="card-body pt-sm-3 pt-0">
+      <!-- Sidebar Backgrounds -->
+      <div>
+        <h6 class="mb-0">Sidebar Colors</h6>
+      </div>
+      <a href="javascript:void(0)" class="switch-trigger background-color">
+        <div class="badge-colors my-2 text-start">
+          <span class="badge filter bg-gradient-primary active" data-color="primary"
+            onclick="sidebarColor(this)"></span>
+          <span class="badge filter bg-gradient-dark" data-color="dark" onclick="sidebarColor(this)"></span>
+          <span class="badge filter bg-gradient-info" data-color="info" onclick="sidebarColor(this)"></span>
+          <span class="badge filter bg-gradient-success" data-color="success" onclick="sidebarColor(this)"></span>
+          <span class="badge filter bg-gradient-warning" data-color="warning" onclick="sidebarColor(this)"></span>
+          <span class="badge filter bg-gradient-danger" data-color="danger" onclick="sidebarColor(this)"></span>
+        </div>
+      </a>
+      <!-- Sidenav Type -->
+      <div class="mt-3">
+        <h6 class="mb-0">Sidenav Type</h6>
+        <p class="text-sm">Choose between 2 different sidenav types.</p>
+      </div>
+      <div class="d-flex">
+        <button class="btn bg-gradient-dark px-3 mb-2 active" data-class="bg-gradient-dark"
+          onclick="sidebarType(this)">Dark</button>
+        <button class="btn bg-gradient-dark px-3 mb-2 ms-2" data-class="bg-transparent"
+          onclick="sidebarType(this)">Transparent</button>
+        <button class="btn bg-gradient-dark px-3 mb-2 ms-2" data-class="bg-white"
+          onclick="sidebarType(this)">White</button>
+      </div>
+      <p class="text-sm d-xl-none d-block mt-2">You can change the sidenav type just on desktop view.</p>
+      <!-- Navbar Fixed -->
+      <div class="mt-3 d-flex">
+        <h6 class="mb-0">Navbar Fixed</h6>
+        <div class="form-check form-switch ps-0 ms-auto my-auto">
+          <input class="form-check-input mt-1 ms-auto" type="checkbox" id="navbarFixed" onclick="navbarFixed(this)">
+        </div>
+      </div>
+      <hr class="horizontal dark my-3">
+      <div class="mt-2 d-flex">
+        <h6 class="mb-0">Light / Dark</h6>
+        <div class="form-check form-switch ps-0 ms-auto my-auto">
+          <input class="form-check-input mt-1 ms-auto" type="checkbox" id="dark-version" onclick="darkMode(this)">
+        </div>
+      </div>
+      <hr class="horizontal dark my-sm-4">
+      <a class="btn btn-outline-dark w-100" href="">View documentation</a>
+      <div class="w-100 text-center">
+        <a class="github-button" href="https://github.com/creativetimofficial/material-dashboard"
+          data-icon="octicon-star" data-size="large" data-show-count="true"
+          aria-label="Star creativetimofficial/material-dashboard on GitHub">Star</a>
+        <h6 class="mt-3">Thank you for sharing!</h6>
+        <a href="https://twitter.com/intent/tweet?text=Check%20Material%20UI%20Dashboard%20made%20by%20%40CreativeTim%20%23webdesign%20%23dashboard%20%23bootstrap5&amp;url=https%3A%2F%2Fwww.creative-tim.com%2Fproduct%2Fsoft-ui-dashboard"
+          class="btn btn-dark mb-0 me-2" target="_blank">
+          <i class="fab fa-twitter me-1" aria-hidden="true"></i> Tweet
+        </a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.creative-tim.com/product/material-dashboard"
+          class="btn btn-dark mb-0 me-2" target="_blank">
+          <i class="fab fa-facebook-square me-1" aria-hidden="true"></i> Share
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
