--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -70,11 +70,10 @@
   <div class="card shadow-lg">
     <div class="card-header pb-0 pt-3">
       <div class="float-start">
-        <h5 class="mt-3 mb-0">Material UI Configurator</h5>
-        <p>See our dashboard options.</p>
+        <h5 class="mt-3 mb-0">Tema Ayarları</h5>
       </div>
       <div class="float-end mt-4" (click)="buttonClass = 'fixed-plugin ps' ">
-        <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
+        <button id="themeCloseButton" class="btn btn-link text-dark p-0 fixed-plugin-close-button">
           <i class="material-icons">clear</i>
         </button>
       </div>
@@ -84,48 +83,56 @@
     <div class="card-body pt-sm-3 pt-0">
       <!-- Sidebar Backgrounds -->
       <div>
-        <h6 class="mb-0">Sidebar Colors</h6>
+        <h6 class="mb-0">Yan Menü Buton Renkleri</h6>
       </div>
       <a href="javascript:void(0)" class="switch-trigger background-color">
         <div class="badge-colors my-2 text-start">
-          <span class="badge filter bg-gradient-primary active" data-color="primary"
-            onclick="sidebarColor(this)"></span>
-          <span class="badge filter bg-gradient-dark" data-color="dark" onclick="sidebarColor(this)"></span>
-          <span class="badge filter bg-gradient-info" data-color="info" onclick="sidebarColor(this)"></span>
-          <span class="badge filter bg-gradient-success" data-color="success" onclick="sidebarColor(this)"></span>
-          <span class="badge filter bg-gradient-warning" data-color="warning" onclick="sidebarColor(this)"></span>
-          <span class="badge filter bg-gradient-danger" data-color="danger" onclick="sidebarColor(this)"></span>
+          <span class="badge filter bg-gradient-primary" data-color="primary" onclick="sidebarColor(this)"
+            (click)="updateSidebarButtonColor('primary')"></span>
+          <span class="badge filter bg-gradient-dark" data-color="dark" onclick="sidebarColor(this)"
+            (click)="updateSidebarButtonColor('dark')"></span>
+          <span class="badge filter bg-gradient-info" data-color="info" onclick="sidebarColor(this)"
+            (click)="updateSidebarButtonColor('info')"></span>
+          <span class="badge filter bg-gradient-success" data-color="success" onclick="sidebarColor(this)"
+            (click)="updateSidebarButtonColor('success')"></span>
+          <span class="badge filter bg-gradient-warning" data-color="warning" onclick="sidebarColor(this)"
+            (click)="updateSidebarButtonColor('warning')"></span>
+          <span class="badge filter bg-gradient-danger" data-color="danger" onclick="sidebarColor(this)"
+            (click)="updateSidebarButtonColor('danger')"></span>
+          <span class="badge filter bg-gradient-light" data-color="light" onclick="sidebarColor(this)"
+            (click)="updateSidebarButtonColor('light')"></span>
         </div>
       </a>
       <!-- Sidenav Type -->
       <div class="mt-3">
-        <h6 class="mb-0">Sidenav Type</h6>
-        <p class="text-sm">Choose between 2 different sidenav types.</p>
+        <h6 class="mb-0">Yan Menü Renk Modu</h6>
       </div>
-      <div class="d-flex">
-        <button class="btn bg-gradient-dark px-3 mb-2 active" data-class="bg-gradient-dark"
-          onclick="sidebarType(this)">Dark</button>
-        <button class="btn bg-gradient-dark px-3 mb-2 ms-2" data-class="bg-transparent"
-          onclick="sidebarType(this)">Transparent</button>
-        <button class="btn bg-gradient-dark px-3 mb-2 ms-2" data-class="bg-white"
-          onclick="sidebarType(this)">White</button>
+      <div class="d-flex mt-2">
+        <button class="btn bg-gradient-dark px-3 mb-2" data-class="bg-gradient-dark" onclick="sidebarType(this)"
+          (click)="updateSidebarMode('gradient-dark')">Koyu</button>
+          
+        <button class="btn bg-gradient-danger px-3 mb-2 ms-2" data-class="bg-white" onclick="sidebarType(this)"
+          (click)="updateSidebarMode('danger')">Turuncu</button>
+
+        <button class="btn bg-gradient-info px-3 mb-2 ms-2" data-class="bg-transparent" onclick="sidebarType(this)"
+          (click)="updateSidebarMode('info')">Mavi</button>
       </div>
       <p class="text-sm d-xl-none d-block mt-2">You can change the sidenav type just on desktop view.</p>
       <!-- Navbar Fixed -->
       <div class="mt-3 d-flex">
-        <h6 class="mb-0">Navbar Fixed</h6>
+        <h6 class="mb-0">Üst Menüyü Sabitle</h6>
         <div class="form-check form-switch ps-0 ms-auto my-auto">
           <input class="form-check-input mt-1 ms-auto" type="checkbox" id="navbarFixed" onclick="navbarFixed(this)">
         </div>
       </div>
       <hr class="horizontal dark my-3">
       <div class="mt-2 d-flex">
-        <h6 class="mb-0">Light / Dark</h6>
+        <h6 class="mb-0">Açık / Koyu</h6>
         <div class="form-check form-switch ps-0 ms-auto my-auto">
           <input class="form-check-input mt-1 ms-auto" type="checkbox" id="dark-version" onclick="darkMode(this)">
         </div>
       </div>
-      <hr class="horizontal dark my-sm-4">
+      <!-- <hr class="horizontal dark my-sm-4">
       <a class="btn btn-outline-dark w-100" href="">View documentation</a>
       <div class="w-100 text-center">
         <a class="github-button" href="https://github.com/creativetimofficial/material-dashboard"
@@ -140,7 +147,7 @@
           class="btn btn-dark mb-0 me-2" target="_blank">
           <i class="fab fa-facebook-square me-1" aria-hidden="true"></i> Share
         </a>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
