--- a/src/app/components/user-operation-claim/user-operation-claim.component.html
+++ b/src/app/components/user-operation-claim/user-operation-claim.component.html
@@ -1,5 +1,4 @@
-<aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 
-        bg-gradient-dark" id="sidenav-main">
+<aside [class]='sidebarModeClass()' id="sidenav-main">
     <app-sidenav></app-sidenav>
 </aside>
 
