--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,5 +1,4 @@
-<aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 
-        bg-gradient-dark" id="sidenav-main">
+<aside [class]='sidebarModeClass()' id="sidenav-main">
     <app-sidenav></app-sidenav>
 </aside>
 
@@ -146,7 +145,7 @@
 
                                             <div class="row justify-content-center mx-2">
                                                 <button type="button" class="btn btn-primary btn-sm w-75 my-auto"
-                                                routerLink="/userOperationClaim/{{user.userMailValue}}">
+                                                    routerLink="/userOperationClaim/{{user.userMailValue}}">
                                                     Yetkiler
                                                 </button>
                                             </div>
